Projeto do jeito que estava antes da ajuda

--- a/index.html
+++ b/index.html
@@ -31,8 +31,36 @@
   </head>
   <body>
     <div class="page">
-      "TESTANDO... TUDO
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logo da cafetieria"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li class="nav__link" href="">Receitas</li>
+            <li class="nav__link" href="">Reservar uma mesa</li>
+            <li class="nav__link" href="">Contatos</li>
+          </ul>
+        </nav>
+        <div class="header__title">
+          <span class="span-accent">
+            <h1>Café especial</h1>
+          </span>
+          <h1>na bibloteca Triple Peaks</h1>
+        </div>
+        <p class="header__description">
+          Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+          você e vibrações aconchegantes para soltar a criatividade.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="ilustração de uma
+          cafeteria"
+          class="header__image"
+        />
+      </header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
