--- a/index.html
+++ b/index.html
@@ -39,17 +39,22 @@
             class="nav__logo"
           />
           <ul class="nav__links">
-            <li class="nav__link" href="">Receitas</li>
-            <li class="nav__link" href="">Reservar uma mesa</li>
-            <li class="nav__link" href="">Contatos</li>
+            <li>
+              <a class="nav__link" href="#recipes-id">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Contatos</a>
+            </li>
           </ul>
         </nav>
-        <div class="header__title">
-          <span class="span-accent">
-            <h1>Café especial</h1>
-          </span>
-          <h1>na bibloteca Triple Peaks</h1>
-        </div>
+
+        <h1 class="header__title">
+          <span class="header__span-accent">Café especial</span> na bibloteca
+          Triple Peaks
+        </h1>
         <p class="header__description">
           Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
           você e vibrações aconchegantes para soltar a criatividade.
@@ -60,9 +65,54 @@
           cafeteria"
           class="header__image"
         />
+
+        <div class="header__footer">
+          <div>
+            <p class="header__paragraph">Horários:</p>
+            <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
+            <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
+          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, a cidade de Triple Peaks
+          </p>
+        </div>
       </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes" id="recipes-id">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtilte">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
+
+          <div class="recipes__videos">
+            <div class="recipes__videos-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=X8h28ti-QDU__pq0"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                Receita Aeropress <span>~5min</span>
+              </p>
+            </div>
+            <div class="recipes__videos-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=-cOk3YFDKhNCJSRD"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                Receita de Prensa Francesa <span>~15min</span>
+              </p>
+            </div>
+          </div>
+        </section>
         <section class="reservation"></section>
       </main>
       <footer class="footer"></footer>
