--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#recipes-id">Receitas</a>
+              <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Reservar uma mesa</a>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
               <a class="nav__link" href="#">Contatos</a>
@@ -78,9 +78,9 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes" id="recipes-id">
+        <section class="recipes" id="recipes">
           <h2 class="recipes__title">Receitas</h2>
-          <p class="recipes__subtilte">
+          <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
           </p>
 
@@ -113,7 +113,7 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
+        <section class="reservation" id="reservation"></section>
       </main>
       <footer class="footer"></footer>
     </div>
