--- a/index.html
+++ b/index.html
@@ -113,7 +113,72 @@
             </div>
           </div>
         </section>
-        <section class="reservation" id="reservation"></section>
+
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Reservar uma mesa</h2>
+
+          <form class="reservation__form" action="#" method="post">
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Nome: *</label>
+              <input
+                class="form__input"
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Nome"
+                required
+              />
+
+              <label class="form__label" for="guests"
+                >Número de convidados: *</label
+              >
+              <input
+                class="form__input"
+                type="number"
+                id="guests"
+                name="guests"
+                placeholder="1-8"
+                min="1"
+                max="8"
+                required
+              />
+
+              <label class="form__label" for="datetime">Data e hora: *</label>
+              <input
+                class="form__input"
+                type="datetime-local"
+                id="datetime"
+                name="datetime"
+                required
+              />
+
+              <label class="form__label" for="email">Seu e-mail: *</label>
+              <input
+                class="form__input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="email@email.com"
+                required
+              />
+            </fieldset>
+            <button class="form__button" type="submit">
+              Reservar uma mesa
+            </button>
+            <div class="form__checkbox-group">
+              <input
+                class="form__checkbox"
+                type="checkbox"
+                id="terms"
+                name="terms"
+                required
+              />
+              <label class="form__checkbox-label" for="terms"
+                >Eu concordo com os termos de uso</label
+              >
+            </div>
+          </form>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
