--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
 
-          <form class="reservation__form" action="#" method="post">
+          <form class="reservation__form form" action="#" method="post">
             <fieldset class="form__fieldset">
               <label class="form__label" for="name">Nome: *</label>
               <input
