--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contatos</a>
+              <a class="nav__link" href="#contacts">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -180,7 +180,42 @@
           </form>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer" id="contacts">
+        <div class="footer__columns">
+          <img
+            class="footer__logo"
+            src="/images/logo_coffeeshop_light.svg"
+            alt="Logo"
+          />
+          <div class="footer__content">
+            <h2 class="footer__content-heading">Redes Sociais</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__content-link" href="#">
+                  <img
+                    src="images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__content-link" href="#">
+                  <img
+                    src="images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__circle"></div>
+        <p class="footer__copyright">©2025 Anthony Petronilho</p>
+      </footer>
     </div>
   </body>
 </html>
